--- a/src/components/character/styles.scss
+++ b/src/components/character/styles.scss
@@ -1,20 +1,6 @@
 /* Design inspiration:  https://dribbble.com/shots/1978243-Latest-News */
 
 
-.card {
-  width:280px;
-  display: block;
-  margin: 60px auto;
-  box-shadow: 10px 5px 40px 20px darken(#341cac, 5%);
-  transition: .25s;
-
-  &:hover {
-    box-shadow: 10px 5px 40px 20px darken(#341cac, 10%);
-    cursor: pointer;
-
-  }
-}
-
 .card-header {
   height: 150px;
   width: 100%;
@@ -35,22 +21,22 @@
   width:100%;
 }
 
-.date {
-  font-size: 11px;
-  font-weight: 600;
-  color: grey;
+
+.body {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  .body_content {
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
+    font-size: 13px;
+    .body-content_top {
+      align-content: center;
+      padding-bottom: 5px;
+      margin-bottom: 5px;
+      border-bottom: 1px solid grey;
+    }
+  }
 }
 
-.body-content {
-  padding-bottom: 40px;
-  font-size: 13px;
-  line-height: 1.8;
-}
-
-.designer-link {
-  color:#fff;
-  text-align:center;
-  font-size: 12px;
-  text-decoration: none;
-  display:block;
-}
