--- a/src/components/character/styles.scss
+++ b/src/components/character/styles.scss
@@ -2,11 +2,40 @@
 
 $textColor: #fff;
 
+.wrapper {
+      margin-bottom: 50px;
+}
+
+.VirtualList > div{
+  display: flex;
+  flex-direction: row;
+  flex-flow: wrap;
+  justify-content: space-around;
+  width: 48%;
+  height: 0!important;
+}
+
+.header {
+  background: rebeccapurple;
+  text-align: center;
+	-webkit-box-shadow: 0px 8px 5px 1px rgba(66,33,99,0.24);
+  -moz-box-shadow: 0px 8px 5px 1px rgba(66,33,99,0.24);
+  box-shadow: 0px 8px 5px 1px rgba(66,33,99,0.24);
+}
+
+.card {
+  padding-bottom: 16px;
+  margin: 16px 0;
+  width: 24%;
+  -webkit-box-shadow: 0px 8px 5px 1px rgba(0,0,0,0.24);
+  -moz-box-shadow: 0px 8px 5px 1px rgba(0,0,0,0.24);
+  box-shadow: 0px 8px 5px 1px rgba(0,0,0,0.24);
+}
+
 .card-header {
   height: 150px;
   width: 100%;
   padding: 15px;
-  width:100%;
   background-size:cover;
   color:$textColor;
 }
@@ -18,10 +47,8 @@ $textColor: #fff;
 
 .card-body {
   padding: 15px;
-  background-color:$textColor;
   width:100%;
 }
-
 
 .body {
   display: flex;
@@ -43,14 +70,17 @@ $textColor: #fff;
   }
 }
 
-.checkWrapper {
-  .checkButn {
-    display: block;
-    width: 100%;
-    :hover {
-      cursor: pointer;
-    }
-  }
+.body-footer {
+  padding: 0 10px;
 }
 
-
+@media screen and (max-width:1200px) {
+  .card {
+    width: 49%;
+  }
+}
+@media screen and (max-width:600px) {
+  .card {
+    width: 100%;
+  }
+}
